--- a/index.html
+++ b/index.html
@@ -20,30 +20,31 @@
       <img src="./images/image-header-mobile.jpg" alt="people working on computers">
     </div>
 
-    <div class="main-content">
-      <h1>Get <span class="insights"> insights </span>that help your business grow.</h1>
-      <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer
-        experience, and overall efficiency.</p>
-    </div>
-
-    <div class="stats-content">
-      <div class="stats-companies">
-        <h2>10K+</h2>
-        <p>companies</p>
+    <div class="secondary-container">
+      <div class="main-content">
+        <h1>Get <span class="insights"> insights </span>that help your business grow.</h1>
+        <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer
+          experience, and overall efficiency.</p>
       </div>
 
-      <div class="stats-templates">
-        <h2>314</h2>
-        <p>templates</p>
-      </div>
+      <div class="stats-content">
+        <div class="stats-companies">
+          <h2>10k+</h2>
+          <p>companies</p>
+        </div>
 
-      <div class="stats-queries">
-        <h2>12M+</h2>
-        <p>queries</p>
+        <div class="stats-templates">
+          <h2>314</h2>
+          <p>templates</p>
+        </div>
+
+        <div class="stats-queries">
+          <h2>12M+</h2>
+          <p>queries</p>
+        </div>
       </div>
     </div>
   </div>
-
 
   <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
